[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/Title.png" type="Texture" id=2]
[ext_resource path="res://UI/ControlsMenu.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 736.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="CanvasLayer"]
position = Vector2( 640, 320 )
texture = ExtResource( 2 )

[node name="New Game" type="Button" parent="CanvasLayer"]
margin_left = 768.0
margin_top = 480.0
margin_right = 1024.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 224, 32 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="CanvasLayer"]
margin_left = 768.0
margin_top = 544.0
margin_right = 1024.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 224, 32 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="CanvasLayer"]
margin_left = 96.0
margin_top = 576.0
margin_right = 672.0
margin_bottom = 640.0
text = "You've been shrunk. Or turned into a toy. Or are hallucinating like in Joe the Barbarian. Or some other flimsy pretext for why you now need to descend to floor 5 and find the magic can while fighting assorted copyright-free toys."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsMenu" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 704.0
margin_top = 128.0
margin_right = 1088.0
margin_bottom = 704.0
[connection signal="pressed" from="CanvasLayer/New Game" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CanvasLayer/Controls" to="." method="_on_Controls_pressed"]
